shifting booths over fixing spacing

--- a/main.css
+++ b/main.css
@@ -165,18 +165,18 @@ label {
     border: 1px solid #000;
 }
 
-#booth9 {
+#booth10 {
     margin-left: 35px;
 }
 
-#booth26 {
+#booth27 {
     margin-left: 35px;
 }
 
-#booth43 {
+#booth44 {
     margin-left: 35px;
 }
 
-#booth64 {
+#booth65 {
     margin-left: 70px;
 }
